--- a/src/main/resources/themes/default/private_chat_tab.fxml
+++ b/src/main/resources/themes/default/private_chat_tab.fxml
@@ -11,7 +11,8 @@
 <fx:root type="Tab" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
    <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
       <children>
-  <WebView fx:id="messagesWebView" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
+        <WebView fx:id="messagesWebView" blendMode="ADD" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0"
+                 prefWidth="-1.0" VBox.vgrow="ALWAYS"/>
     <TextField fx:id="messageTextField" onAction="#onSendMessage" promptText="%chat.messagePrompt" />
       </children>
    </VBox>
