--- a/src/main/resources/themes/default/news.fxml
+++ b/src/main/resources/themes/default/news.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.*?>
 <?import java.lang.*?>
 <?import javafx.scene.web.*?>
 <?import javafx.scene.web.WebView?>
 
 
-<WebView fx:id="newsRoot" prefHeight="-1.0" prefWidth="-1.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.news.NewsController" />
+<FlowPane fx:id="newsRoot" hgap="20.0" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.40"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.news.NewsController">
+</FlowPane>
