--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -155,7 +155,7 @@
   /* These are NOT from modena. */
   -fx-context-menu-background: rgba(0, 0, 0, .8);
   -fx-tile-background:  rgba(50, 50, 50, .9);
-
+  -fx-transparent-hover:  rgba(255, 255, 255, .1);
 }
 
 .scroll-bar > .increment-button > .increment-arrow,
@@ -288,9 +288,8 @@
 
 .decorated-window {
   -fx-background-color: black;
-  -fx-background-image: url('images/background.jpg');
+  -fx-background-image: url('images/background.png');
   -fx-background-position: center;
-  -fx-background-repeat: no-repeat;
 }
 
 /***************** Menu *****************/
@@ -415,34 +414,33 @@
 
 /***************** News *****************/
 
-.news-tile {
-  -fx-background-color: -fx-tile-background;
-  -fx-color: -fx-base;
+.news-item {
   -fx-border-color: derive(-fx-box-border, 10%);
-  -fx-border-width: 1;
-  -fx-effect: dropshadow(gaussian, #00000066, 8, 0.8, 0, 0);
-}
-
-.news-tile:hover {
-  -fx-background-color: derive(-fx-tile-background, 10%);
-  -fx-color: -fx-hover-base;
+  -fx-border-width: 0 0 1 0;
   -fx-cursor: hand;
+  -fx-text-fill: -fx-mid-text-color;
 }
 
-.news-tile-image {
+.news-item:hover {
+  -fx-background-color: -fx-transparent-hover;
+  -fx-color: -fx-hover-base;
+  -fx-text-fill: -fx-light-text-color;
+}
+
+.news-item-image {
 
 }
 
-.news-tile-title {
+.news-item-title {
   -fx-font-size: 1.2em;
-  -fx-font-weight: bold;
 }
 
-.news-tile-text {
+.news-item-text {
 
 }
 
-.news-tile-authored {
+.news-item-authored {
+  -fx-text-fill: -fx-dark-text-color;
   -fx-font-size: 0.8em;
 }
 
