--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -288,11 +288,17 @@
 
 .decorated-window {
   -fx-background-color: black;
-  -fx-background-image: url('images/background.png');
+  -fx-background-image: url('images/background.jpg');
   -fx-background-position: center;
+  -fx-border-width: 1;
+  -fx-border-color: -fx-box-border;
 }
 
-/***************** Menu *****************/
+.decorated-window:maximized {
+  -fx-border-width: 0;
+}
+
+/***************** Main window header *****************/
 
 .main-menu-button {
   -fx-background-color: transparent;
@@ -332,6 +338,23 @@
   -fx-min-width: 120px;
   -fx-border-color: -fx-box-border;
 }
+
+.main-navigation > .toggle-button {
+  -fx-font-size: 1.5em;
+  -fx-text-fill: -fx-dark-text-color;
+  -fx-background-color: transparent;
+}
+
+.main-navigation > .toggle-button:hover {
+  -fx-text-fill: -fx-mid-text-color;
+  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.2), 5, 0.8, 0, 0);
+}
+
+.main-navigation > .toggle-button:selected {
+  -fx-text-fill: -fx-light-text-color;
+  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
+}
+
 
 /***************** Status bar *****************/
 
@@ -374,25 +397,6 @@
 .table-view > .virtual-flow .scroll-bar > .thumb {
   -fx-color: -fx-base;
 }
-
-/***************** Navigation *****************/
-
-.main-navigation > .toggle-button {
-  -fx-font-size: 1.5em;
-  -fx-text-fill: -fx-dark-text-color;
-  -fx-background-color: transparent;
-}
-
-.main-navigation > .toggle-button:hover {
-  -fx-text-fill: -fx-mid-text-color;
-  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.2), 5, 0.8, 0, 0);
-}
-
-.main-navigation > .toggle-button:selected {
-  -fx-text-fill: -fx-light-text-color;
-  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
-}
-
 /***************** Notification button *****************/
 
 .notification-button {
