--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -211,9 +211,6 @@
 .split-pane {
   -fx-background-color: -fx-background;
 }
-.titled-pane > *.content {
-    -fx-border-color: transparent;
-}
 
 /***************** Button-like things *****************/
 
@@ -287,9 +284,10 @@
 /***************** Window *****************/
 
 .decorated-window {
-  -fx-background-color: black;
+  -fx-background-color: #1c0000;
   -fx-background-image: url('images/background.jpg');
   -fx-background-position: center;
+  -fx-background-repeat: no-repeat;
   -fx-border-width: 1;
   -fx-border-color: -fx-box-border;
 }
@@ -380,6 +378,16 @@
 }
 .status-bar-menu-button:openvertically > .arrow-button > .arrow {
   -fx-shape: "M0 1 L1 1 L.5 0 Z";
+}
+
+/***************** Titled pane *****************/
+
+.titled-pane > *.title {
+  -fx-background: transparent;
+}
+
+.titled-pane > *.content {
+  -fx-border-color: transparent;
 }
 
 /***************** Table *****************/
@@ -609,107 +617,4 @@
 
 .web-view {
   -fx-background: transparent;
-}
-
-
-
-
-/*****************
-
-All the following belongs to WebViews (chat, news), therefore default CSS. Java FX variables can't be used.
-
-*****************/
-
-html, body {
-  /* TODO WebView does not yet allow transparency. As a workaround, we use a black background together with WebView set to blend mode LIGHTEN. */
-  background-color: black;
-  margin: 0;
-  padding: 0;
-  /* Use same as -fx-light-text-color */
-  color: #F5F5F5;
-  font-family: System;
-  font-size: 14px;
-}
-
-a {
-  /* Use same as -fx-accent */
-  color: #609e15;
-  text-decoration: none;
-}
-
-/***************** Chat (WebView) *****************/
-
-#chat-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.own-username {
-  color: orange;
-}
-
-.chat-message {
-  /* Same height as avatar */
-  line-height: 20px;
-}
-
-.chat-message.message .username::after {
-  content: ':';
-}
-
-.chat-message.action {
-  font-style: italic;
-}
-
-.chat-message:nth-of-type(odd) {
-  background-color: rgba(255,255,255,0.06667);
-}
-
-.chat-message * {
-  padding: 0 2px;
-  word-wrap: break-word;
-}
-
-.chat-message td {
-  vertical-align: top;
-}
-
-.chat-message .time {
-}
-
-.chat-message > .avatar {
-  width: 40;
-  height: 20px;
-  padding: 0 2px;
-}
-
-.avatar>img {
-  display: block;
-}
-
-.chat-message .text {
-  width: 100%;
-}
-
-.chat-message .username {
-  padding-right: 10px;
-  max-width: 50%;
-  text-align: right;
-  white-space: nowrap;
-}
-
-.chat-message.self {
-  color: orange;
-}
-
-/***************** News (WebView) *****************/
-
-html.news-detail {
-  padding: 20px;
-}
-
-.news-detail img {
-  display: block;
-  max-width: 100%;
-  height: auto !important;
 }
