--- a/src/main/resources/themes/default/enter_password.fxml
+++ b/src/main/resources/themes/default/enter_password.fxml
@@ -5,7 +5,8 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<VBox fx:id="enterPasswordRoot" styleClass="enter-game-password" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.EnterPasswordController">
+<VBox fx:id="enterPasswordRoot" styleClass="popup" xmlns="http://javafx.com/javafx/8.0.40"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.EnterPasswordController">
   <children>
     <PasswordField fx:id="passwordTextField" prefWidth="300.0" promptText="%game.join.passwordPrompt"/>
   </children>
