--- a/src/main/resources/themes/default/user_info_window.fxml
+++ b/src/main/resources/themes/default/user_info_window.fxml
@@ -17,20 +17,17 @@
    </columnConstraints>
    <rowConstraints>
       <RowConstraints minHeight="10.0" vgrow="NEVER" />
-      <RowConstraints minHeight="10.0" vgrow="NEVER" />
-      <RowConstraints minHeight="10.0" vgrow="NEVER" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
       <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <Label fx:id="usernameLabel" text="&lt;Username&gt;" GridPane.columnSpan="2147483647">
+      <Label fx:id="usernameLabel" text="&lt;Username&gt;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647">
          <font>
             <Font size="32.0" />
          </font>
-         <graphic>
-            <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
-         </graphic>
       </Label>
-      <Label fx:id="countryLabel" text="&lt;Country&gt;" GridPane.rowIndex="1">
+      <Label fx:id="countryLabel" text="&lt;Country&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1"
+             GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets left="5.0" />
          </GridPane.margin>
@@ -38,24 +35,28 @@
             <ImageView fx:id="countryImageView" pickOnBounds="true" preserveRatio="true" />
          </graphic>
       </Label>
-      <Label text="&lt;Member since&gt;" GridPane.rowIndex="2" />
-      <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+      <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
          <tabs>
             <Tab text="%playerInfo.ratingOverTime">
                <content>
                   <VBox>
                      <children>
-                        <HBox alignment="TOP_RIGHT">
+                        <HBox alignment="TOP_RIGHT" spacing="10.0">
                            <children>
-                              <ToggleButton fx:id="ratingOver365DaysButton" mnemonicParsing="false" onAction="#onRatingOver90DaysButtonClicked" selected="true" text="%playerInfo.ratingOverTime.last3Months">
+                              <ToggleButton fx:id="ratingOver90DaysButton" mnemonicParsing="false"
+                                            onAction="#onRatingOver90DaysButtonClicked" selected="true"
+                                            text="%playerInfo.ratingOverTime.last3Months">
                                  <toggleGroup>
                                     <ToggleGroup fx:id="timeRange" />
                                  </toggleGroup>
                               </ToggleButton>
-                              <ToggleButton fx:id="ratingOver90DaysButton" mnemonicParsing="false" onAction="#onRatingOver365DaysButtonClicked" text="%playerInfo.ratingOverTime.lastYear" toggleGroup="$timeRange" />
+                              <ToggleButton fx:id="ratingOver365DaysButton" mnemonicParsing="false"
+                                            onAction="#onRatingOver365DaysButtonClicked"
+                                            text="%playerInfo.ratingOverTime.lastYear" toggleGroup="$timeRange"/>
                            </children>
                         </HBox>
-                        <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false">
+                        <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false"
+                                   VBox.vgrow="ALWAYS">
                           <xAxis>
                              <NumberAxis fx:id="rating90DaysXAxis" side="BOTTOM" />
                           </xAxis>
@@ -69,7 +70,8 @@
             </Tab>
          </tabs>
       </TabPane>
-      <Button mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+      <Button mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowSpan="2"
+              GridPane.valignment="TOP">
          <graphic>
             <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -78,6 +80,7 @@
             </ImageView>
          </graphic>
       </Button>
+      <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2"/>
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="32.0" />
